# adc-model

./: .gitignore  .gitmodules  LICENSE  MODEL.md  README.md  pyproject.toml
outputs/: SUMMARY.md
outputs/ngspice/: SUMMARY.md  dynamic_waveform.csv  static_waveform.csv
outputs/ngspice/ngspice/: adc_behavioral.inc  dynamic_spectrum.cir  static_inl_dnl.cir
outputs/python/: SUMMARY.md  dynamic_waveform.csv  static_waveform.csv
outputs/python/veriloga/: configurable_adc.va  dynamic_spectrum.cir  static_inl_dnl.cir
outputs/spectre/: SUMMARY.md  dynamic_waveform.csv  static_waveform.csv
outputs/spectre/veriloga/: adc_behavioral.inc  adc_include.scs  dynamic_spectrum.scs
scripts/: compare_engines.py  compare_static_engines.py  install_python.sh  run_all_simulations.sh  run_analysis.py  run_dynamic.py  run_static.py
src/adc_model/: __init__.py  batch_metrics.py  cli_helpers.py  config.py  dynamic.py  engine_compare.py  io.py  model.py  ngspice_engine.py  noise.py  plot_style.py  report.py  simulation_log.py  spectre_engine.py  static.py  static_compare.py
testbench/ngspice/: README.md
testbench/spectre/: README.md  static_inl_dnl.scs
tests/: __init__.py  test_compare_static_engines.py  test_dynamic.py  test_engine_compare.py  test_io_clock.py  test_io_static_edges.py  test_model.py  test_model_parity.py  test_ngspice_engine.py  test_noise.py  test_plot_limits.py  test_report.py  test_simulation_log.py  test_spectre_artifacts.py  test_spectre_engine.py  test_static.py  test_static_sampling.py
veriloga/: configurable_adc.va
(+18 files in other folders)
